--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,28 @@
   background-position: center;
   background-size: cover;
   height: 200px;
+  transition: 1s all;
+}
+
+#headerOur .header {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  background-color: transparent;
+  height: 100px;
+  z-index: 100;
+}
+
+#headerOur .header-hien {
+  position: fixed;
+  width: 100%;
+  background-color: #fff;
+  height: auto;
+  z-index: 100;
+  height: 72px;
+  padding-top: 29px;
+  transform: translateY(-100px);
+  transition: 0.8s all;
 }
 
 #headerOur .navbar-nav .option {
