--- a/scss/helpers/_variable.scss
+++ b/scss/helpers/_variable.scss
@@ -1,5 +1,30 @@
 //color
 $color-tim : #b61984;
 $color-black: #181818;
-$color-white: #fff
-// padding
+$color-white: #fff;
+//font size
+
+$fs-1: 20px;
+$fs-2: 43px;
+$fs-3: 60px;
+$fs-4: 0.75rem;
+
+//font weight
+$fw-1: 600;
+$fw-2: 700;
+
+
+//Padding
+$pd-1: 20px;
+$pd-2: 40px;
+
+
+//Margin
+$mg-1: 5px;
+$mg-2: 10px;
+
+
+//border
+$bd-1: 10px;
+$border :1px solid rgba(128, 128, 128, 0.363);
+//box-shadow
