--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,5 +1,6 @@
 @import "./helpers/variable";
 @import "./base/reset";
+@import "./helpers/mixin";
 @import "./layouts/header";
 @import "./layouts/about";
 @import "./layouts/info";
