--- a/scss/layouts/_header.scss
+++ b/scss/layouts/_header.scss
@@ -1,33 +1,23 @@
 #headerOur {
+    @include backGround;
     background-image: url('./../../img/yellow_top_wave_01.png');
-    background-position: center;
-    background-size: cover;
     height: 200px;
     transition: 1s all;
     .header{
-        position: fixed;
+        @include headerMenu(fixed,100%,transparent,100,100px);
         top: 0;
-        width: 100%;
-        background-color: transparent;
-        height: 100px;
-        z-index: 100;
     }
     .header-hien{
-        position: fixed;
-        width: 100%;
-        background-color: #fff;
-        height: auto;
-        z-index: 100;
-        height: 72px;
-        padding-top: 29px;
+        @include headerMenu(fixed,100%,#fff,100,72px);
         transform: translateY(-100px);
         transition: 0.8s all;
+        padding-top: 29px;
     }
     
     .navbar-nav {
         .option {
             color: $color-black;
-            font-weight: 600;
+            font-weight: $fw-1;
             line-height: 40px;
             transition: 0.3s all;
             &:hover{
@@ -41,7 +31,7 @@
                 background-color: $color-tim;
                 display: block;
                 margin: 0 auto;
-                margin-top: 10px;
+                margin-top: $mg-2;
                 transform: scale(0);
                 transition: 0.3s all;
             }
@@ -57,7 +47,7 @@
             line-height: 40px;
             i {
                 transition: 0.2s all;
-                margin-right: 10px;
+                margin-right: $mg-2;
 
                 &:hover {
                     color: $color-tim;
@@ -87,7 +77,7 @@
                     background-color: $color-white;
                 }
                 i {
-                    margin-right: 5px;
+                    margin-right: $mg-1;
                 }
             }          
         }
